--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "A React web-app for members who want add content for community discussion. (Udacity React ND)",
   "main": "index.js",
   "scripts": {
+    "bundle": "browserify client/index.js -t babelify -o ./api-server/public/main.js",
     "start": "node ./api-server/server.js",
-    "watch": "nodemon ./api-server/server.js"
+    "watch:server": "nodemon ./api-server/server.js",
+    "watch:client": "watchify client/index.js -t babelify -o ./api-server/public/main.js",
+    "watch:sync": "browser-sync start -c ./browsersync.js",
+    "watch": "npm-run-all --parallel watch:*"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,19 @@
   },
   "homepage": "https://github.com/riley-rangel/readable#readme",
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browser-sync": "^2.23.6",
+    "browserify": "^16.1.1",
+    "nodemon": "^1.17.2",
+    "npm-run-all": "^4.1.2",
+    "watchify": "^3.11.0"
+  },
+  "dependencies": {
+    "dotenv": "^5.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
