--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A React web-app for members who want add content for community discussion. (Udacity React ND)",
   "main": "index.js",
   "scripts": {
-    "bundle": "browserify client/index.js -t babelify -o ./api-server/public/main.js",
+    "bundle": "browserify client/index.js -t babelify -t browserify-css -o ./api-server/public/main.js",
     "start": "node ./api-server/server.js",
     "watch:server": "nodemon ./api-server/server.js",
-    "watch:client": "watchify client/index.js -t babelify -o ./api-server/public/main.js",
+    "watch:client": "watchify client/index.js -t babelify -t browserify-css -o ./api-server/public/main.js",
     "watch:sync": "browser-sync start -c ./browsersync.js",
     "watch": "npm-run-all --parallel watch:*"
   },
@@ -29,6 +29,7 @@
     "babelify": "^8.0.0",
     "browser-sync": "^2.23.6",
     "browserify": "^16.1.1",
+    "browserify-css": "^0.14.0",
     "nodemon": "^1.17.2",
     "npm-run-all": "^4.1.2",
     "watchify": "^3.11.0"
