--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
-node_modules/
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-.idea
 .env
-*.log
-api-server/public/main.js
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
