--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A React web-app for members who want add content for community discussion. (Udacity React ND)",
   "private": true,
   "scripts": {
+    "server": "node api-server/server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
