--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/riley-rangel/readable#readme",
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "dotenv": "^5.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
