--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "uuid": "^3.2.1"
   }
 }
